--- a/app/views/top_items/_top_item.html.erb
+++ b/app/views/top_items/_top_item.html.erb
@@ -1,3 +1,3 @@
-<div data-top-item-id="<%= top_item.id %>">
+<div data-top-item-id="<%= top_item.id %>" data-controller="top-item">
   <%= render top_item.item %>
 </div>
