Adding new items page and logic

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -50,7 +50,7 @@ a {
     color: #fff;
 }
 
-.header a.router-link-active {
+.header a.nav-link-active {
     color: #fff;
     font-weight: 400;
 }
