--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   <body>
     <header class="header">
       <nav class="inner">
-        <a href="/" class=""><%= image_tag "home.svg", width: "24px" %></a>
-        <a href="/top" class="router-link-active">Top</a>
-        <a href="/new" class="">New</a>
+        <a href="/" class=""><%= image_tag "home.svg", width: "23px" %></a>
+        <a href="/top" class="<%= content_for :top_items_active %>">Top</a>
+        <a href="/new" class="<%= content_for :new_items_active %>">New</a>
         <a href="/show" class="">Show</a>
         <a href="/ask" class="">Ask</a>
         <a href="/job" class="">Jobs</a>
