--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -1,3 +1,5 @@
+<%- content_for( :top_items_active ) { "nav-link-active" } %>
+
 <div class="news-view view">
   <div class="news-list-nav">
     <% if @page <= 0 %>
