Adding show routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <a href="/" class=""><%= image_tag "home.svg", width: "23px" %></a>
         <a href="/top" class="<%= content_for :top_items_active %>">Top</a>
         <a href="/new" class="<%= content_for :new_items_active %>">New</a>
-        <a href="/show" class="">Show</a>
+        <a href="/show" class="<%= content_for :show_items_active %>">Show</a>
         <a href="/ask" class="">Ask</a>
         <a href="/job" class="">Jobs</a>
         <a href="https://github.com/" target="_blank" rel="noopener" class="github">
