--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <a href="/top" class="<%= content_for :top_items_active %>">Top</a>
         <a href="/new" class="<%= content_for :new_items_active %>">New</a>
         <a href="/show" class="<%= content_for :show_items_active %>">Show</a>
-        <a href="/ask" class="">Ask</a>
+        <a href="/ask" class="<%= content_for :ask_items_active %>">Ask</a>
         <a href="/job" class="">Jobs</a>
         <a href="https://github.com/" target="_blank" rel="noopener" class="github">
           Built with Rails + Stimulus
