Added jobs views and logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <a href="/new" class="<%= content_for :new_items_active %>">New</a>
         <a href="/show" class="<%= content_for :show_items_active %>">Show</a>
         <a href="/ask" class="<%= content_for :ask_items_active %>">Ask</a>
-        <a href="/job" class="">Jobs</a>
+        <a href="/job" class="<%= content_for :job_items_active %>">Jobs</a>
         <a href="https://github.com/" target="_blank" rel="noopener" class="github">
           Built with Rails + Stimulus
         </a>
