--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -197,3 +197,186 @@ a {
         }
     }
 }
+
+.view {
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.item-view-header {
+    background-color: #fff;
+    padding: 1.8em 2em 1em;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+
+    h1 {
+        display: inline;
+        font-size: 1.5em;
+        margin: 0;
+        margin-right: .5em;
+    }
+
+    .meta, .host {
+        color: #828282;
+
+        a {
+            text-decoration: underline;
+            color: #828282;
+        }
+    }
+}
+
+.item-view-comments {
+    background-color: #fff;
+    margin-top: 10px;
+    padding: 0 2em .5em;
+}
+
+.item-view-comments-header {
+    margin: 0;
+    font-size: 1.1em;
+    padding: 1em 0;
+    position: relative;
+
+    .spinner {
+        display: inline-block;
+        margin: -15px 0;
+    }
+}
+
+.comment-children {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    .comment-children {
+        margin-left: 1.5em;
+    }
+}
+
+.comment {
+    border-top: 1px solid #eee;
+    position: relative;
+
+    .by {
+        color: #828282;
+
+        a {
+            color: #828282;
+            text-decoration: underline;
+        }
+    }
+
+    .text {
+        overflow-wrap: break-word;
+    }
+
+    .toggle {
+        background-color: #fffbf2;
+        padding: .3em .5em;
+        border-radius: 4px;
+    }
+
+    .toggle.open {
+        padding: 0;
+        background-color: transparent;
+        margin-bottom: -.5em;
+    }
+
+    .toggle a {
+        color: #828282;
+        cursor: pointer;
+    }
+
+    .by, .text, .toggle {
+        font-size: .9em;
+        margin: 1em 0;
+    }
+}
+
+.spinner {
+    -webkit-transition: opacity .15s ease;
+    -o-transition: opacity .15s ease;
+    transition: opacity .15s ease;
+    -webkit-animation: rotator 1.4s linear infinite;
+    animation: rotator 1.4s linear infinite;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+}
+
+.spinner.show {
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+}
+
+.spinner .path {
+    stroke: #f60;
+    stroke-dasharray: 126;
+    stroke-dashoffset: 0;
+    -webkit-transform-origin: center;
+    -ms-transform-origin: center;
+    transform-origin: center;
+    -webkit-animation: dash 1.4s ease-in-out infinite;
+    animation: dash 1.4s ease-in-out infinite;
+}
+
+@-webkit-keyframes rotator {
+    0% {
+        -webkit-transform: scale(0.5) rotate(0deg);
+        transform: scale(0.5) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: scale(0.5) rotate(270deg);
+        transform: scale(0.5) rotate(270deg);
+    }
+}
+
+@keyframes rotator {
+    0% {
+        -webkit-transform: scale(0.5) rotate(0deg);
+        transform: scale(0.5) rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: scale(0.5) rotate(270deg);
+        transform: scale(0.5) rotate(270deg);
+    }
+}
+
+@-webkit-keyframes dash {
+    0% {
+        stroke-dashoffset: 126;
+    }
+
+    50% {
+        stroke-dashoffset: 63;
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+    }
+
+    to {
+        stroke-dashoffset: 126;
+        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dashoffset: 126;
+    }
+
+    50% {
+        stroke-dashoffset: 63;
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+    }
+
+    to {
+        stroke-dashoffset: 126;
+        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
+    }
+}
