--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -295,6 +295,32 @@ a {
     }
 }
 
+.user-view {
+background-color: #fff;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+padding: 2em 3em;
+
+ h1 {
+margin: 0;
+font-size: 1.5em;
+}
+
+ .meta {
+list-style-type: none;
+padding: 0;
+}
+
+.label {
+display: inline-block;
+min-width: 4em;
+}
+
+.links a {
+text-decoration: underline;
+}
+}
+
 .spinner {
     -webkit-transition: opacity .15s ease;
     -o-transition: opacity .15s ease;
