--- a/app/views/items/_comments.html.erb
+++ b/app/views/items/_comments.html.erb
@@ -1,5 +1,5 @@
 <%= cache ['comments-list', item] do %>
-  <ul class="comment-children" data-target="comments.comments">
+  <ul class="comment-children" data-target="toggle.comments">
     <% item.kids.order(:kid_location).each do | kid | %>
       <li class="comment">
         <div class="by"><a href="/user/<%= kid.by %>" class=""><%= kid.by %></a> <%= local_time_ago kid.time %></div>
@@ -7,9 +7,9 @@
           <%= kid.text.html_safe unless kid.text.nil? %>
         </div>
         <% if kid.kids.count > 0 %>
-          <div data-controller='comments' data-comments-count="<%= kid.kids.count %>">
-            <div class="toggle open" data-target="comments.toggle"><a data-target='comments.link' data-action="comments#toggle">[-]</a></div>
-            <%= render partial: 'item_comments', locals: { item: kid } %>
+          <div data-controller='toggle' data-toggle-count="<%= kid.kids.count %>">
+            <div class="toggle open" data-target="toggle.toggle"><a data-target='toggle.link' data-action="toggle#toggle">[-]</a></div>
+            <%= render partial: 'comments', locals: { item: kid } %>
           </div>
         <% end %>
       </li>
