--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,33 +1,27 @@
 <%= cache ['item', @item] do %>
-  <div class="view">
-    <div class="item-view-header">
-      <%= link_to @item.url do %>
-        <h1><%= @item.title %></h1>
-      <% end %>
-      <% if @item.host %>
-        <span class="host"> (<%= @item.host %>) </span>
-      <% end %>
-      <p class="meta">
-        <%= pluralize @item.score, "point" %>
-        | by <a href="/user/<%= @item.by %>"><%= @item.by %></a>
-        <%= local_time_ago @item.time %>
-      </p>
-    </div>
-    <div class="item-view-comments">
-      <p class="item-view-comments-header">
-        <% if @item.descendants == 0 %>
-          No comments yet.
-          <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
-            <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
-            </circle>
-          </svg>
-        <% else %>
-          <%= pluralize(@item.descendants, 'comment') %>
+  <div data-controller="item" data-item-id="<%= @item.hn_id %>">
+    <div class="view">
+      <div class="item-view-header" data-target="item.metadata">
+        <%= render partial: 'item_metadata', locals: {item: @item} %>
+      </div>
+      <div class="item-view-comments" data-target="item.comments">
+        <p class="item-view-comments-header">
+          <% if @item.descendants == 0 %>
+            No comments yet.
+            <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
+              <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
+              </circle>
+            </svg>
+          <% else %>
+            <%= pluralize(@item.descendants, 'comment') %>
+          <% end %>
+        </p>
+        <div data-controller="comments" data-comments-hn-id="<%= @item.hn_id %>" data-target="comments.comments">
+        <% if @item.descendants > 0 %>
+          <%= render partial: 'comments', locals: { item: @item } %>
         <% end %>
-      </p>
-      <% if @item.descendants > 0 %>
-        <%= render partial: 'item_comments', locals: { item: @item } %>
-      <% end %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
