--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
     <%= action_cable_meta_tag %>
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <header class="header">
