--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="inner">
-        <a href="/" class=""><%= image_tag "home.svg", width: "23px" %></a>
+        <a href="/" class=""><%= image_tag "train_48.png", width: "23px" %></a>
         <a href="/top" class="<%= content_for :top_items_active %>">Top</a>
         <a href="/new" class="<%= content_for :new_items_active %>">New</a>
         <a href="/show" class="<%= content_for :show_items_active %>">Show</a>
