--- a/app/views/manifest/show.json.erb
+++ b/app/views/manifest/show.json.erb
@@ -3,12 +3,12 @@
   "name": "Hacker News Progressive Web App",
   "icons": [
     {
-      "src": "<%= asset_path('home.svg') %>",
+      "src": "<%= asset_path('train_192.png') %>",
       "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "<%= asset_path('home.svg') %>",
+      "src": "<%= asset_path('train_512.png') %>",
       "type": "image/svg",
       "sizes": "512x512"
     }
