--- a/app/views/manifest/show.json.erb
+++ b/app/views/manifest/show.json.erb
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "<%= asset_path('train_192.png') %>",
-      "type": "image/svg",
+      "type": "image/png",
       "sizes": "192x192"
     },
     {
       "src": "<%= asset_path('train_512.png') %>",
-      "type": "image/svg",
+      "type": "image/png",
       "sizes": "512x512"
     }
   ],
