--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,22 +8,23 @@
     <%= stylesheet_pack_tag 'application' %>
     <%= action_cable_meta_tag %>
     
-    <!-- PWA Details -->
+    <!-- Lighthouse Details -->
     <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#C50001"/>
 
+    <meta name="Description" content="A version of the Hacker News Progressive Web App using Ruby and Rails">
   </head>
   <body>
     <header class="header">
       <nav class="inner">
-        <a href="/" class=""><%= image_tag "train_48.png", width: "23px" %></a>
-        <a href="/top" class="<%= content_for :top_items_active %>">Top</a>
-        <a href="/new" class="<%= content_for :new_items_active %>">New</a>
-        <a href="/show" class="<%= content_for :show_items_active %>">Show</a>
-        <a href="/ask" class="<%= content_for :ask_items_active %>">Ask</a>
-        <a href="/job" class="<%= content_for :job_items_active %>">Jobs</a>
-        <a href="https://github.com/" target="_blank" rel="noopener" class="github">
+        <a href="/" aria-label="Top Hacker News Items and Home Page"><%= image_tag "train_48.png", width: "23px", alt: "Home Page"%></a>
+        <a href="/top" aria-label="Top Hacker News Items" class="<%= content_for :top_items_active %>">Top</a>
+        <a href="/new" aria-label="New Hacker News Items" class="<%= content_for :new_items_active %>">New</a>
+        <a href="/show" aria-label="Show Hacker News" class="<%= content_for :show_items_active %>">Show</a>
+        <a href="/ask" aria-label="Ask Hacker News" class="<%= content_for :ask_items_active %>">Ask</a>
+        <a href="/job" aria-label="Hacker News Jobs" class="<%= content_for :job_items_active %>">Jobs</a>
+        <a href="https://github.com/" aria-label="Link to Project's github page" target="_blank" rel="noopener" class="github">
           Built with Rails + Stimulus
         </a>
       </nav>
