--- a/app/views/top_items/_top_item.html.erb
+++ b/app/views/top_items/_top_item.html.erb
@@ -1,3 +1,3 @@
-<div data-top-item-id="<%= top_item.id %>" data-controller="top-item">
+<li data-location="<%= top_item.location %>" >
   <%= render top_item.item %>
-</div>
+</li>
