--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="news-list">
     <%= cache ['news-list', @top_item, @page] do %>
-      <ul>
+      <ul data-controller="top-item" data-top-item-items="<%= @top_items.pluck(:item_id) %>" data-top-item-locations="<%= @top_items.pluck(:location) %>">
         <% @top_items.each do |top_item| %>
           <%= cache top_item do %>
             <%= render top_item %>
