--- a/app/views/new_items/_new_item.html.erb
+++ b/app/views/new_items/_new_item.html.erb
@@ -1,3 +1,3 @@
-<div data-new-item-id="<%= new_item.id %>" data-controller="new-item">
+<li data-location="<%= new_item.location %>" >
   <%= render new_item.item %>
-</div>
+</li>
