--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,7 +1,7 @@
 <%- content_for( :new_items_active ) { "nav-link-active" } %>
 
 <div class="news-view view">
-  <div class="news-list-nav">
+  <nav class="news-list-nav">
     <% if @page <= 0 %>
       <a href="/news" class="disabled">&lt; prev</a>
     <% else %>
@@ -16,10 +16,10 @@
       <%= link_to "more &gt;".html_safe, new_path(page: @page + 1) %>
     <% end %>
     
-  </div>
-  <div class="news-list">
+  </nav>
+  <main class="news-list">
     <%= cache ['new-list', @new_item, @page] do %>
-      <ul>
+      <ul data-controller="new-item items" data-items-items="<%= @new_items.pluck(:item_id) %>" data-new-item-locations="<%= @new_items.pluck(:location) %>">
         <% @new_items.each do |new_item| %>
           <%= cache new_item do %>
             <%= render new_item %>
@@ -27,4 +27,4 @@
         <% end %>
       </ul>
     <% end %>
-  </div>
+  </main>
