Updating Show items

--- a/app/views/show_items/_show_item.erb
+++ b/app/views/show_items/_show_item.erb
@@ -1,3 +1,3 @@
-<div data-show-item-id="<%= show_item.id %>" data-controller="show-item">
+<li data-location="<%= show_item.location %>" >
   <%= render show_item.item %>
-</div>
+</li>
