--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,7 +1,7 @@
 <%- content_for( :show_items_active ) { "nav-link-active" } %>
 
 <div class="news-view view">
-  <div class="news-list-nav">
+  <nav class="news-list-nav">
     <% if @page <= 0 %>
       <a href="/show" class="disabled">&lt; prev</a>
     <% else %>
@@ -16,10 +16,10 @@
       <%= link_to "more &gt;".html_safe, show_path(page: @page + 1) %>
     <% end %>
     
-  </div>
-  <div class="news-list">
+  </nav>
+  <main class="news-list">
     <%= cache ['shows-list', @show_item, @page] do %>
-      <ul>
+      <ul data-controller="show-item items" data-items-items="<%= @item_ids %>" data-show-item-locations="<%= @locations %>">
         <% @show_items.each do |show_item| %>
           <%= cache show_item do %>
             <%= render show_item %>
@@ -27,5 +27,5 @@
         <% end %>
       </ul>
     <% end %>
-  </div>
+  </main>
 </div>
