--- a/app/views/ask_items/_ask_item.html.erb
+++ b/app/views/ask_items/_ask_item.html.erb
@@ -1,3 +1,3 @@
-<div data-ask-item-id="<%= ask_item.id %>" data-controller="ask-item">
+<li data-location="<%= ask_item.location %>" >
   <%= render ask_item.item %>
-</div>
+</li>
