--- a/app/views/job_items/_job_item.html.erb
+++ b/app/views/job_items/_job_item.html.erb
@@ -1,3 +1,3 @@
-<div data-job-item-id="<%= job_item.id %>" data-controller="job-item">
+<li data-location="<%= job_item.location %>">
   <%= render job_item.item %>
-</div>
+</li>
