--- a/app/views/users/_metadata.html.erb
+++ b/app/views/users/_metadata.html.erb
@@ -6,5 +6,6 @@
   <li>Loading details<svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
       <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
       </circle>
-    </svg></li>
+    </svg>
+  </li>
 <% end %>
