--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,17 +8,28 @@
         <p class="item-view-comments-header">
           <% if @item.descendants == 0 %>
             No comments yet.
-            <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
-              <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
-              </circle>
-            </svg>
           <% else %>
             <%= pluralize(@item.descendants, 'comment') %>
           <% end %>
         </p>
-        <div data-controller="comments" data-comments-hn-id="<%= @item.hn_id %>" data-target="comments.comments">
+        <div data-controller="comments" data-comments-hn-id="<%= @item.hn_id %>" data-hn-id="<%= @item.hn_id %>">
           <% if @item.descendants > 0 %>
+            <p class="item-view-comments-header">
+              Refreshing Comments...
+              <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
+                <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
+                </circle>
+              </svg>
+            </p>
             <%= render partial: 'comments', locals: { item: @item } %>
+          <% else %>
+            <p class="item-view-comments-header">
+              Waiting for comments...
+              <svg width="44px" height="44px" viewBox="0 0 44 44" class="spinner show">
+                <circle fill="none" stroke-width="4" stroke-linecap="round" cx="22" cy="22" r="20" class="path">
+                </circle>
+              </svg>
+            </p>
           <% end %>
         </div>
       </div>
