Refactoring items out of Items Channel

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,7 +15,7 @@
   </nav>
   <main class="news-list">
     <%= cache ['news-list', @job_item, @page] do %>
-      <ul data-controller="job-item items" data-items-items="<%= @item_ids %>">
+      <ul data-controller="job-item items">
         <% @job_items.each do |job_item| %>
           <%= cache job_item do %>
             <%= render job_item %>
