--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -15,7 +15,7 @@
   </nav>
   <main class="news-list">
     <%= cache ['new-list', @new_item, @page] do %>
-      <ul data-controller="new-item items" data-items-items="<%= @new_items.pluck(:item_id) %>">
+      <ul data-controller="new-item items">
         <% @new_items.each do |new_item| %>
           <%= cache new_item do %>
             <%= render new_item %>
