--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -3,8 +3,12 @@ body {
     font-size: 15px;
     background-color: #f2f3f5;
     margin: 0;
-    padding-top: 55px;
+    // padding-top: 55px;
     overflow-y: scroll;
+}
+
+section {
+    padding-top: 55px;
 }
 
 a, body {
@@ -404,4 +408,12 @@ a {
         -webkit-transform: rotate(450deg);
         transform: rotate(450deg);
     }
+}
+
+.swipable--view {
+  --n: 1;
+  --i: 0;
+  width: 100%; // fallback
+  width: calc(var(--n)*100%);
+  transform: translate(calc(var(--i)/var(--n)*-100%));
 }
