--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,24 @@
     <meta name="theme-color" content="#C50001"/>
     <meta name="Description" content="A version of the Hacker News Progressive Web App using Ruby and Rails">
   </head>
-  <body>
-    <header class="header">
-      <nav class="inner">
-        <a href="/" aria-label="Top Hacker News Items and Home Page"><%= image_tag "train_48.png", width: "23px", alt: "Home Page"%></a>
-        <a href="/top" aria-label="Top Hacker News Items" class="<%= content_for :top_items_active %>">Top</a>
-        <a href="/new" aria-label="New Hacker News Items" class="<%= content_for :new_items_active %>">New</a>
-        <a href="/show" aria-label="Show Hacker News" class="<%= content_for :show_items_active %>">Show</a>
-        <a href="/ask" aria-label="Ask Hacker News" class="<%= content_for :ask_items_active %>">Ask</a>
-        <a href="/job" aria-label="Hacker News Jobs" class="<%= content_for :job_items_active %>">Jobs</a>
-        <a href="https://github.com/" aria-label="Link to Project's github page" target="_blank" rel="noopener" class="github">
-          Built with Rails + Stimulus
-        </a>
-      </nav>
-    </header>
-    <main>
-      <%= yield %>
-    </main>
+  <body >
+    <section data-controller="swipable" data-target="swipable.view" class="swipable--view">
+      <header class="header">
+        <nav class="inner">
+          <a href="/" aria-label="Top Hacker News Items and Home Page"><%= image_tag "train_48.png", width: "23px", alt: "Home Page"%></a>
+          <a href="/top" aria-label="Top Hacker News Items" class="<%= content_for :top_items_active %>">Top</a>
+          <a href="/new" aria-label="New Hacker News Items" class="<%= content_for :new_items_active %>">New</a>
+          <a href="/show" aria-label="Show Hacker News" class="<%= content_for :show_items_active %>">Show</a>
+          <a href="/ask" aria-label="Ask Hacker News" class="<%= content_for :ask_items_active %>">Ask</a>
+          <a href="/job" aria-label="Hacker News Jobs" class="<%= content_for :job_items_active %>">Jobs</a>
+          <a href="https://github.com/" aria-label="Link to Project's github page" target="_blank" rel="noopener" class="github">
+            Built with Rails + Stimulus
+          </a>
+        </nav>
+      </header>
+      <main>
+        <%= yield %>
+      </main>
+    </section>
   </body>
 </html>
